soft rewrite conversion, finish transfers
